details_app_dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-app-dev-service-latest
  labels:
    app: details-app-dev
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: details-app-dev
    version: latest
  ports:
  - protocol: TCP
    port: 800          # External port for latest version
    targetPort: 8000  # Internal port in the container

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-dev-container
  labels:
    app: postgres-dev
    version: latest
spec:
  type: LoadBalancer
  selector:
    app: postgres
    version: latest
  ports:
  - protocol: TCP
    port: 5431          # External port for latest version
    targetPort: 5432  # Internal port in the container
