details_app_dev/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: details-app-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: details-app-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: details-app-dev-service
            port:
              number: 8000
